server/src/main/java/com/example/cardealership/web/error/MlServiceUnavailableException.java
package com.example.cardealership.web.error;

public class MlServiceUnavailableException extends MlServiceException {
    public MlServiceUnavailableException(String message, Throwable cause) {
        super(message, cause);
    }
}